# [1.4.0] -
  - Añadida facturación de clientes
  - Actualización de librerias
  - Mejoras para tests
  - Añadido numero de facturas pendientes al endpoint de listado de clientes

# [1.3.5] - 15/08/2021
  - Ahora se guarda la diferencia de precio con impuestos en el modelo de cambio de precios

# [1.3.4] - 13/08/2021
  - Corregidas las tablas de precios que se envían por telegram

# [1.3.3] - 31/07/2021
  - Mejoradas las tablas de precios que se envían por telegram

# [1.3.2] - 21/07/2021
  - El precio de coste del producto ahora se guarda en el modelo de cambio de precio

# [1.3.1] - 10/07/2021
  - Corregido las sumas trimestrales por tipo de pago, en dashboard y pagarés

# [1.3.0] - 13/06/2021
  - Añadido al endpoint de editar factura, la posibilidad de editar la información de pago
  - Añadidas plantillas para facturas de cliente de 2 y 3 hojas
  - Añadidos 3 decimales a los pesos en kilos y eliminados los decimales en los pesos en unidades
  - Añadido año en las notas permanentes
  - Añadido contador de pagos en efectivo por trimestres
  - Añadida lista de cheques pagados por años
  - Reducido el número de lineas de las facturas de cliente al exportarlas
  - Añadido endpoint para eliminar productos (pensado solo para borrar productos de clientes)
  - Corregido error por el que no se pueden modificar los productos de cliente
  - Añadido endpoint para consultar los pagos anuales por tipo de pago

# [1.2.1] - 02/05/2021
  - Añadido número de facturas trimestrales a la facturación

# [1.2.0] - 18/04/2021
  - Corregido el error del contador de albaranes, no sumaba bien los albaranes con la fecha del primer dia del trimestre
  - Añadido número de facturas del año en el listado de clientes
  - Corregido el orden de facturas en el libro de clientes

# [1.1.1] - 16/03/2021
  - Actualización de librerias

# [1.1.0] - 27/02/2021
  - Añadida búsqueda de albaranes por canal

# [1.0.2]
  - Corregida zona horaria en el Dockerfile

# [1.0.1]