@@ -2373,4 +2373,123 @@ describe('ClientInvoicesController', () => {
       });
     });
   });
+  describe('GET /client/invoices/payments', () => {
+    const PATH = '/client/invoices/payments';
+    before(() => testDB.clean());
+
+    describe('Usuario no autenticado', () => {
+      let response;
+
+      beforeAll(done => {
+        supertest(app)
+          .get(PATH)
+          .end((err, res) => {
+            response = res;
+            done();
+          });
+      });
+
+      test('Debería dar un 401', () => {
+        expect(response.statusCode)
+          .toBe(401);
+      });
+    });
+
+    describe('Usuario autenticado', () => {
+      let token;
+      before(done => {
+        requestLogin()
+          .then(res => {
+            token = res;
+            done();
+          });
+      });
+
+      test('Se ha autenticado el usuario', () => {
+        expect(token)
+          .toBeTruthy();
+      });
+
+      let client;
+
+      before(() => ClientModel.create({ name: 'Cliente' })
+        .then(clientCreated => {
+          client = clientCreated;
+        }));
+
+      describe('Sin facturas', () => {
+        let response;
+        before(done => {
+          supertest(app)
+            .get(PATH)
+            .set('Authorization', `Bearer ${token}`)
+            .end((err, res) => {
+              response = res;
+              done();
+            });
+        });
+
+        test('Debería dar un 200', () => {
+          expect(response.status)
+            .toBe(200);
+        });
+
+        test('No devuelve facturas', () => {
+          expect(response.body.length)
+            .toBe(0);
+        });
+      });
+
+      describe('Dispone de facturas', () => {
+        let response;
+        const CLIENT_NAME = 'test';
+        before(() => ClientInvoiceModel.create({
+          client: client._id,
+          date: 1609355546762,
+          businessName: CLIENT_NAME,
+          nInvoice: '22-25',
+          paid: true,
+        }));
+
+        before(() => ClientInvoiceModel.create({
+          client: client._id,
+          businessName: CLIENT_NAME,
+        }));
+
+        before(() => ClientInvoiceModel.create({
+          ...invoiceMock,
+          client: client._id,
+          businessName: CLIENT_NAME,
+          nInvoice: '22-23',
+        }));
+
+        before(done => {
+          supertest(app)
+            .get(PATH)
+            .set('Authorization', `Bearer ${token}`)
+            .end((err, res) => {
+              response = res;
+              done();
+            });
+        });
+
+        test('Debería dar un 200', () => {
+          expect(response.status)
+            .toBe(200);
+        });
+
+        test('Devuelve las facturas', () => {
+          const invoiceData = response.body[0];
+          expect(response.body.length)
+            .toBe(1);
+          expect(invoiceData.date)
+            .toBe(invoiceMock.date);
+          expect(invoiceData.nInvoice)
+            .toBe('22-23');
+          expect(invoiceData.total)
+            .toBe(invoiceMock.total);
+        });
+      });
+    });
+  });
 });
