@@ -2,7 +2,8 @@
   - Añadida facturación de clientes
   - Actualización de librerias
   - Mejoras para tests
-  - Añadido numero de facturas pendientes al endpoint de listado de clientes
+  - Añadido numero de facturas sin numero de factura al endpoint de listado de clientes
+  - Anadido listado de facturas de clientes sin pagar
 
 # [1.3.5] - 15/08/2021
   - Ahora se guarda la diferencia de precio con impuestos en el modelo de cambio de precios
